app/src/test/resources/programs/invalid/foreign/bad_syntax.exe
fun foreign f() -> Int

fun f() -> Int = foreign

fun main() -> Int {
    foreign let x: Int;
    ()
}